--- a/for_my_princess.html
+++ b/for_my_princess.html
@@ -279,7 +279,7 @@
           <span>✨</span> For My Princess
         </div>
         <h1>Starry Night of Reasons</h1>
-        <p class="subtitle">Tap the stars, my princess. Each one is a little truth about you. 💫</p>
+        <p class="subtitle">Tap the stars, my princess. Each one is a little about you. 💫</p>
       </div>
 
       <div class="sky-wrapper" id="sky">
@@ -321,7 +321,7 @@
         <!-- 🔴 IMPORTANT: put your YouTube EMBED link in src below -->
         <iframe
           id="love-video"
-          src="https://youtu.be/Zd0iVmeU-H4"
+          src="https://cdn.jsdelivr.net/gh/mrkalilinuxx/for_my_princess@main/princess_video.mp4.mp4"
           title="For My Princess"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen>
@@ -348,21 +348,21 @@
       "When you laugh, it feels like the whole room gets lighter.",
       "You don’t even realise how kind and soft your heart actually is.",
       "You make even the most boring days feel special, just by being there.",
-      "Thank you for staying, even on the days when I’m not my best version.",
+      "you still stay, even on the days when I’m not my best version.",
       "I love the way you say my name, like it actually belongs to you.",
       "Your hug feels more like home than any place I have ever been to.",
       "The world feels less scary knowing you’re somewhere in it with me.",
       "You understand my silence better than most people understand my words.",
       "With you, small things become big memories that I never want to forget.",
-      "You’re not just my princess, you’re my favourite person, in every timeline.",
+      "You’re not just my princess, you’re my favourite person, in every lifetime.",
       "You deserve softness, patience, and love that never makes you doubt yourself.",
       "Every time I see you, a part of me quietly says, ‘There goes my whole heart.’",
       "I love the way you care, even when you pretend you don’t.",
       "You are the calm in my chaos and the light in my overthinking.",
       "If I had to choose you in every lifetime, I would, without even thinking.",
-      "You are my best decision, my answered prayer, my daily wish come true.",
-      "Thank you for loving me the way you do—it still feels unreal sometimes.",
-      "No matter what happens, a part of my heart will always belong only to you."
+      "You are my best dream, my answered prayer, my daily wish come true.",
+      "you know you should never doubth about if you are keeping me happy or not i want to say it that i am really very happy every milli seconds i love you my wifee.",
+      "No matter what happens, my heart will always belong only to you more than that you are my heart my wifee."
     ];
 
     const sky = document.getElementById("sky");
@@ -439,3 +439,4 @@
   </script>
 </body>
 </html>
+
